hero section and portfolio pic

--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
         <meta name="viewpoint" content="width, initial-scale=1.0">
         <meta name="description" content="Ashley Underwood's portfolio">
     </head>
-
+    
     <body>
-        <!-- Navigation & Main Header -->
-          <header>
-              <h1>Ashley Underwood</h1>
-              <nav>
-                  <a href="#about">About</a>                
-                  <a href="#portfolio">Projects</a>
-                  <a href="#skills">Skills</a>
-                  <a href="#contact">Contact</a>  
-              </nav>
-          </header>
+        <!-- Navigation & Header -->
+        <header>
+            <h1>Ashley Underwood</h1>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#portfolio">Projects</a>
+                <a href="#skills">Skills</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </header>
+
+        <!-- Hero -->
+        <section class="hero">
+            <img src="au-portfolio\assets\images\Ashley.jpg" alt="Ashley">
+            <div>
+                <h2>Aspiring Web Developer</h2>
+            </div>
+        </section>
+          
