--- a/index.html
+++ b/index.html
@@ -27,4 +27,19 @@
                 <h2>Aspiring Web Developer</h2>
             </div>
         </section>
+
+        <main>
+            <section class="page-section" id="about">
+                <h2>About Me</h2>
+                <div>
+                    <p>
+                        I am currently enrolled in UNC Charlotte's FullStack Web Development Bootcamp and <br>
+                        aim to become a Front-End Web Developer. <br>
+                        I've always liked being creative but never much enjoyed most outlets for it until I discovered coding. <br>
+                        Coding combined my love of reading and background as an English major, <br>
+                        to bring words to life beyond the page. <br>  
+                    </p>
+                </div>
+            </section>
+        </main>
           
