projects grid started

--- a/index.html
+++ b/index.html
@@ -41,5 +41,27 @@
                     </p>
                 </div>
             </section>
+
+            <!-- Portfolio -->
+            <section class="page-section" id="portfolio">
+                <h2> My Projects</h2>
+                <div class="project-grid">
+                    <!-- Project #1 -->
+                    <a href="https://adunderwood96.github.io/run-buddy/"  target="_blank" class="grid-item run-buddy">
+                        <div>
+                            <h3>Run Buddy</h3>
+                            <span>HTML, CSS</span>
+                        </div>
+                    </a>
+
+                    <!-- Project #2 -->
+                    <a href="https://adunderwood96.github.io/Horiseon/"  target="_blank" class="grid-item horiseon">
+                        <div>
+                          <h3>Horiseon</h3>
+                          <span>HTML, CSS</span>
+                        </div>
+                    </a>                    
+                </div>
+            </section>            
         </main>
           
