skills section added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
                         </div>
                     </a>                    
                 </div>
-            </section>            
+            </section>
+            
+            <!-- Skills -->
+            <section class="skills" id="skills">
+                <h2>Skills</h2>
+                <ul class="ul-skills">
+                    <li class="li-skills">HTML</li>
+                    <li class="li-skills">CSS</li>
+                    <li class="li-skills">Git and Command Line</li>
+                </ul>
+            </section>
+
+            <!-- Contact -->
         </main>
           
