--- a/index.html
+++ b/index.html
@@ -75,5 +75,12 @@
             </section>
 
             <!-- Contact -->
+            <form class="contact" id="contact">
+                <h2>Contact Me</h2>		
+                <input id="name" type="text" placeholder="NAME">
+                <input id="email" type="text" placeholder="E-MAIL">
+                <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
+            <input id="submit" type="submit" value="Send!">
+            </form>    
         </main>
           
