--- a/index.html
+++ b/index.html
@@ -83,4 +83,15 @@
             <input id="submit" type="submit" value="Send!">
             </form>    
         </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <a href="#about">About</a>                
+            <a href="#portfolio">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>               
+        </footer>
+        <!-- Footer End -->
+    </body>
+</html>
           
