--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Ashley Underwood | Web Developer in Training</title>
-        <link rel="stylesheet" href="C:\Users\jpark\Desktop\Ashley\coding bc\Untitled-2.css">
+        <link rel="stylesheet" href="au-portfolio\assets\style\style.css">
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width, initial-scale=1.0">
         <meta name="description" content="Ashley Underwood's portfolio">
