header/nav  style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Ashley Underwood | Web Developer in Training</title>
-        <link rel="stylesheet" href="au-portfolio\assets\style\style.css">
+        <link rel="stylesheet" href="assets\style\style.css">
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width, initial-scale=1.0">
         <meta name="description" content="Ashley Underwood's portfolio">
@@ -22,7 +22,7 @@
 
         <!-- Hero -->
         <section class="hero">
-            <img src="au-portfolio\assets\images\Ashley.jpg" alt="Ashley">
+            <img src="assets\images\Ashley.jpg" alt="Ashley">
             <div>
                 <h2>Aspiring Web Developer</h2>
             </div>
