--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <main>
-            <section class="page-section" id="about">
+            <section class="content" id="about">
                 <h2>About Me</h2>
                 <div>
                     <p>
@@ -43,7 +43,7 @@
             </section>
 
         <!-- Portfolio -->
-            <section class="page-section" id="portfolio">
+            <section class="content" id="portfolio">
                 <h2> My Projects</h2>
                 <div class="project-grid">
                     <!-- Project #1 -->
@@ -65,7 +65,7 @@
             </section>
             
         <!-- Skills -->
-            <section class="skills" id="skills">
+            <section class="content" id="skills">
                 <h2>Skills</h2>
                 <ul class="ul-skills">
                     <li class="li-skills">HTML</li>
