portfolio/about style/alignment

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </section>
 
-        <main>
+        <main class="content-page">
             <section class="content" id="about">
                 <h2>About Me</h2>
                 <div>
