--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
         <!-- Skills -->
             <section class="content" id="skills">
                 <h2>Skills</h2>
-                <ul class="ul-skills">
+                <div>
+                <ul>
                     <li class="li-skills">HTML</li>
                     <li class="li-skills">CSS</li>
                     <li class="li-skills">Git and Command Line</li>
                 </ul>
+                </div>
             </section>
 
         <!-- Contact -->
