vertical text, changing colors for headers/bkg

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="hero">
             <img src="assets\images\Ashley.jpg" alt="Ashley">
             <div>
-                <h2>Aspiring Web Developer</h2>
+                <h2 class="sideways">Aspiring Web Developer</h2>
             </div>
         </section>
 
