changed portfolio card style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Ashley Underwood</h1>
             <nav>
                 <a href="#about">About</a>
-                <a href="#portfolio">Projects</a>
+                <a href="#projects">Projects</a>
                 <a href="#skills">Skills</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -42,25 +42,15 @@
                 </div>
             </section>
 
-        <!-- Portfolio -->
-            <section class="content" id="portfolio">
-                <h2> My Projects</h2>
-                <div class="project-grid">
-                    <!-- Project #1 -->
-                    <a href="https://adunderwood96.github.io/run-buddy/"  target="_blank" class="grid-item run-buddy">
-                        <div>
-                            <h3>Run Buddy</h3>
-                            <span>HTML, CSS</span>
-                        </div>
-                    </a>
-
-                    <!-- Project #2 -->
-                    <a href="https://adunderwood96.github.io/Horiseon/"  target="_blank" class="grid-item horiseon">
-                        <div>
-                          <h3>Horiseon</h3>
-                          <span>HTML, CSS</span>
-                        </div>
-                    </a>                    
+        <!-- Projects -->
+            <section id="projects">
+                <div class="container">
+                    <img src="assets\images\horiseon.png" alt="horiseon website">
+                    <div class="card-details">
+                        <span class="tag">HTML & CSS</span>
+                        <div class="name"> Horiseon</div> 
+                        <button a href="https://adunderwood96.github.io/Horiseon/">View Here!</button>                   
+                    </div>
                 </div>
             </section>
             
