--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </section>
 
-        <main class="content-page">
+        <main class="page">
             <section class="content" id="about">
                 <h2>About Me</h2>
                 <div>
@@ -43,13 +43,55 @@
             </section>
 
         <!-- Projects -->
-            <section id="projects">
+            <section class="content" id="projects">
+                <h2>Projects</h2>
                 <div class="container">
-                    <img src="assets\images\horiseon.png" alt="horiseon website">
+                    <!-- Project #1 -->
                     <div class="card-details">
+                        <img src="assets\images\horiseon.png" alt="horiseon website">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Horiseon</div> 
-                        <button a href="https://adunderwood96.github.io/Horiseon/">View Here!</button>                   
+                        <a href="https://adunderwood96.github.io/Horiseon/"><button>View Here!</button></a>                  
+                    </div>
+
+                    <!-- Project #2 -->
+                    <div class="card-details">
+                        <img src="assets\images\horiseon.png" alt="run-buddy website">
+                        <span class="tag">HTML & CSS</span>
+                        <div class="name"> Run Buddy</div> 
+                        <a href="https://adunderwood96.github.io/run-buddy/"><button>View Here!</button></a>                  
+                    </div>
+
+                    <!-- Project #3 -->
+                    <div class="card-details">
+                        <img src="assets\images\horiseon.png" alt="placeholder ">
+                        <span class="tag">HTML & CSS</span>
+                        <div class="name"> Placeholder</div> 
+                        <a href="#/"><button>View Here!</button></a>                  
+                    </div>
+
+                    <!-- Project #4 -->
+                    <div class="card-details">
+                        <img src="assets\images\horiseon.png" alt="placeholer">
+                        <span class="tag">HTML & CSS</span>
+                        <div class="name"> Placeholder</div> 
+                        <a href="#/"><button>View Here!</button></a>                  
+                    </div>
+
+                    <!-- Project #5 -->
+                    <div class="card-details">
+                        <img src="assets\images\horiseon.png" alt="placeholder">
+                        <span class="tag">HTML & CSS</span>
+                        <div class="name"> Placeholder</div> 
+                        <a href="#/"><button>View Here!</button></a>                  
+                    </div>
+
+                    <!-- Project #6 -->
+                    <div class="card-details">
+                        <img src="assets\images\horiseon.png" alt="placeholder">
+                        <span class="tag">HTML & CSS</span>
+                        <div class="name"> Placeholder</div> 
+                        <a href="#/"><button>View Here!</button></a>                  
                     </div>
                 </div>
             </section>
