--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Ashley Underwood | Web Developer in Training</title>
         <link rel="stylesheet" href="assets\style\style.css">
+        <link rel="shortcut icon" href="assets\images\cat.jpg" type="image/x-icon">
+
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width, initial-scale=1.0">
         <meta name="description" content="Ashley Underwood's portfolio">
@@ -72,7 +74,7 @@
 
                     <!-- Project #4 -->
                     <div class="card-details">
-                        <img src="assets\images\horiseon.png" alt="placeholer">
+                        <img src="assets\images\horiseon.png" alt="placeholder">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Placeholder</div> 
                         <a href="#/"><button>View Here!</button></a>                  
