--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
                 <h2 class="sideways">Aspiring Web Developer</h2>
             </div>
         </section>
+        <!-- Hero End -->
 
+        <!-- Main Page Start -->
         <main class="page">
+
+        <!-- About Me -->
             <section class="content" id="about">
                 <h2>About Me</h2>
                 <div>
@@ -43,6 +47,7 @@
                     </p>
                 </div>
             </section>
+        <!-- About Me End -->
 
         <!-- Projects -->
             <section class="content" id="projects">
@@ -97,7 +102,8 @@
                     </div>
                 </div>
             </section>
-            
+        <!-- Projects End -->
+
         <!-- Skills -->
             <section class="content" id="skills">
                 <h2>Skills</h2>
@@ -109,8 +115,9 @@
                 </ul>
                 </div>
             </section>
+        <!-- Skills End -->
 
-        <!-- Contact -->
+        <!-- Contact Info -->
             <form class="contact" id="contact">
                 <h2>Contact Me</h2>		
                 <input id="name" type="text" placeholder="NAME">
@@ -119,6 +126,9 @@
             <input id="submit" type="submit" value="Send!">
             </form>    
         </main>
+        <!-- Contact Info End -->
+
+        <!-- Main Page End -->
 
         <!-- Footer -->
         <footer class="footer">
