media Queries font sizing/padding

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div>
                 <h2 class="sideways">Aspiring Web Developer</h2>
             </div>
+            
         </section>
         <!-- Hero End -->
 
@@ -63,7 +64,7 @@
 
                     <!-- Project #2 -->
                     <div class="card-details">
-                        <img src="assets\images\horiseon.png" alt="run-buddy website">
+                        <img src="assets\images\run-buddy.png" alt="run-buddy website">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Run Buddy</div> 
                         <a href="https://adunderwood96.github.io/run-buddy/"><button>View Here!</button></a>                  
@@ -79,7 +80,7 @@
 
                     <!-- Project #4 -->
                     <div class="card-details">
-                        <img src="assets\images\horiseon.png" alt="placeholder">
+                        <img src="assets\images\run-buddy.png" alt="placeholder">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Placeholder</div> 
                         <a href="#/"><button>View Here!</button></a>                  
@@ -131,9 +132,9 @@
         <!-- Main Page End -->
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="footer">            
             <a href="#about">About</a>                
-            <a href="#portfolio">Projects</a>
+            <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>               
         </footer>
