--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Ashley Underwood | Web Developer in Training</title>
         <link rel="stylesheet" href="assets\style\style.css">
         <link rel="shortcut icon" href="assets\images\cat.jpg" type="image/x-icon">
-
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width, initial-scale=1.0">
         <meta name="description" content="Ashley Underwood's portfolio">
@@ -72,7 +71,7 @@
 
                     <!-- Project #3 -->
                     <div class="card-details">
-                        <img src="assets\images\horiseon.png" alt="placeholder ">
+                        <img src="assets\images\placeholder.jpg" alt="placeholder ">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Placeholder</div> 
                         <a href="#/"><button>View Here!</button></a>                  
@@ -80,7 +79,7 @@
 
                     <!-- Project #4 -->
                     <div class="card-details">
-                        <img src="assets\images\run-buddy.png" alt="placeholder">
+                        <img src="assets\images\placeholder.jpg" alt="placeholder">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Placeholder</div> 
                         <a href="#/"><button>View Here!</button></a>                  
@@ -88,7 +87,7 @@
 
                     <!-- Project #5 -->
                     <div class="card-details">
-                        <img src="assets\images\horiseon.png" alt="placeholder">
+                        <img src="assets\images\placeholder.jpg" alt="placeholder">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Placeholder</div> 
                         <a href="#/"><button>View Here!</button></a>                  
@@ -96,7 +95,7 @@
 
                     <!-- Project #6 -->
                     <div class="card-details">
-                        <img src="assets\images\horiseon.png" alt="placeholder">
+                        <img src="assets\images\placeholder.jpg" alt="placeholder">
                         <span class="tag">HTML & CSS</span>
                         <div class="name"> Placeholder</div> 
                         <a href="#/"><button>View Here!</button></a>                  
