error fix/new project update

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                     <img src="assets\images\horiseon.png" alt="horiseon website" />
                     <span class="tag">HTML & CSS</span>
                     <div class="name">Horiseon</div>
-                    <a href="https://adunderwood96.github.io/Horiseon/"></a>
-                    <button>View Here!</button></a>
+                    <a href="https://adunderwood96.github.io/Horiseon/"><button>View Here!</button></a>
                 </div>
 
                 <!-- Project #2 -->
@@ -73,11 +72,11 @@
                 </div>
 
                 <!-- Project #3 -->
-                <div class="card-details" id="placeholder">
-                    <img src="assets\images\placeholder.jpg" alt="placeholder " />
+                <div class="card-details" id="Randomized Password Generator">
+                    <img src="assets\images\start.png" alt="placeholder " />
                     <span class="tag">HTML & CSS</span>
                     <div class="name">Placeholder</div>
-                    <a href="#/"><button>View Here!</button></a>
+                    <a href="https://adunderwood96.github.io/password-generator/"><button>View Here!</button></a>
                 </div>
 
                 <!-- Project #4 -->
