new skills added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <!-- Project #3 -->
                 <div class="card-details" id="Randomized Password Generator">
                     <img src="assets\images\start.png" alt="placeholder " />
-                    <span class="tag">HTML & CSS</span>
+                    <span class="tag">HTML,CSS, JS</span>
                     <div class="name">Placeholder</div>
                     <a href="https://adunderwood96.github.io/password-generator/"><button>View Here!</button></a>
                 </div>
@@ -113,6 +113,7 @@
                 <ul>
                     <li class="li-skills">HTML</li>
                     <li class="li-skills">CSS</li>
+                    <li class="li-skills">Javascript</li>
                     <li class="li-skills">Git and Command Line</li>
                 </ul>
             </div>
