--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="card-details" id="Randomized Password Generator">
                     <img src="assets\images\start.png" alt="placeholder " />
                     <span class="tag">HTML,CSS, JS</span>
-                    <div class="name">Placeholder</div>
+                    <div class="name">Password Generator</div>
                     <a href="https://adunderwood96.github.io/password-generator/"><button>View Here!</button></a>
                 </div>
 
