--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
 
                 <!-- Project #3 -->
-                <div class="card-details" id="Randomized Password Generator">
+                <div class="card-details" id="Password Generator">
                     <img src="assets\images\start.png" alt="placeholder " />
                     <span class="tag">HTML,CSS, JS</span>
                     <div class="name">Password Generator</div>
