--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                     <li class="li-skills">CSS</li>
                     <li class="li-skills">Javascript</li>
                     <li class="li-skills">Git and Command Line</li>
+                    <li class="li-skills">Web APIs</li>
+                    <li class="li-skills">DOM</li>
                 </ul>
             </div>
         </section>
