updates to skills list

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                     <li class="li-skills">HTML</li>
                     <li class="li-skills">CSS</li>
                     <li class="li-skills">Javascript</li>
+                    <li class="li-skills">AJAX</li>
+                    <li class="li-skills">API</li>
+                    <li class="li-skills">Bootstrap</li>
+                    <li class="li-skills">Jqurey</li>
                     <li class="li-skills">Git and Command Line</li>
                 </ul>
             </div>
