--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             <h2>Projects</h2>
             <div class="container">
                 <!-- Project #1 -->
+                <div class="card-details" id="book-hangover">
+                    <img src="assets\images\book-search.png" alt="book book-search" />
+                    <span class="tag">HTML, CSS, & JS</span>
+                    <div class="name">The Book Hangover Cure</div>
+                    <a href="https://adunderwood96.github.io/a-novel-idea/"><button>View Here!</button></a>
+                </div>
+                <!-- Project #2 -->
                 <div class="card-details" id="Password Generator">
                     <img src="assets\images\start.png" alt="placeholder " />
                     <span class="tag">HTML,CSS, JS</span>
@@ -63,7 +70,7 @@
                     <a href="https://adunderwood96.github.io/password-generator/"><button>View Here!</button></a>
                 </div>
 
-                <!-- Project #2 -->
+                <!-- Project #3 -->
                 <div class="card-details" id="run-buddy">
                     <img src="assets\images\run-buddy.png" alt="run-buddy website" />
                     <span class="tag">HTML & CSS</span>
@@ -71,7 +78,7 @@
                     <a href="https://adunderwood96.github.io/run-buddy/"><button>View Here!</button></a>
                 </div>
 
-                <!-- Project #3 -->                
+                <!-- Project #4 -->
                 <div class="card-details" id="horiseon">
                     <img src="assets\images\horiseon.png" alt="horiseon website" />
                     <span class="tag">HTML & CSS</span>
@@ -79,13 +86,6 @@
                     <a href="https://adunderwood96.github.io/Horiseon/"><button>View Here!</button></a>
                 </div>
 
-                <!-- Project #4 -->
-                <div class="card-details" id="placeholder">
-                    <img src="assets\images\placeholder.jpg" alt="placeholder" />
-                    <span class="tag">HTML & CSS</span>
-                    <div class="name">Placeholder</div>
-                    <a href="#/"><button>View Here!</button></a>
-                </div>
 
                 <!-- Project #5 -->
                 <div class="card-details" id="placeholder">
