--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
             <h2>Projects</h2>
             <div class="container">
                 <!-- Project #1 -->
+                <div class="card-details" id="skittydex">
+                    <img src="assets\images\team.png" alt="skittydex" />
+                    <span class="tag">FullStack</span>
+                    <div class="name">skittydex</div>
+                    <a href="https://skittydex.herokuapp.com/"><button>View Here!</button></a>
+                </div>
                 <div class="card-details" id="book-hangover">
                     <img src="assets\images\book-search.png" alt="book book-search" />
                     <span class="tag">HTML, CSS, & JS</span>
